[project]
name = "dpsn-plugin-gamesdk"
version = "0.1.0"
description = "DPSN Plugin for Python SDK for GAME by Virtuals"
authors = [{ name = "dpsn-dev", email = "dev@dpsn.org" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "/Users/anishrane/workspace/dpsn-asyncio-py/asyncio-dpsn-client/dist/dpsn_client-0.1.0-py3-none-any.whl",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
